syntax = "proto3";

package appointment;

option java_package = "com.proto.appointment";
option java_multiple_files = true;

message Appointment {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string appointment_date = 4;
  string appointment_time = 5;
}

message AppointmentRequest {
  Appointment appointment = 1;
}

message AppointmentResponse {
  string result = 1;
}

message ViewAppointmentsRequest {
  string request = 1;
}

message ViewAppointmentsResponse {
  string result = 1;
}

service AppointmentService {
  rpc newAppointment(AppointmentRequest) returns (AppointmentResponse) {};

  rpc viewAppointments(ViewAppointmentsRequest) returns (stream ViewAppointmentsResponse);
}
